<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.araragi.medcalculator.MainActivity">

    <!-- view for AdMob Banner Ad -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.70"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="143">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id"
                    android:foregroundGravity="top"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="143">

                <TextView
                    android:text="@string/text_volume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/volume_main"

                    android:layout_weight="1"

                    android:gravity="bottom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textAlignment="textEnd" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_solution"
                    android:layout_weight="1"

                    style="@android:style/Widget.Material.EditText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/dose_in_vol"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/text_dose_in_vol"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textAlignment="textEnd" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_dose_in_volume"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.EditText" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/text_weight"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textAlignment="textEnd" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_weight"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.EditText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/text_dose_ordered"
                    android:layout_weight="1"
                    android:text="@string/dose_ordered"
                    android:gravity="bottom"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textAlignment="textEnd" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_dose_ordered"
                    android:layout_weight="1"
                    style="@android:style/Widget.Material.EditText" />


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:text="@string/infusion_rate"
                    android:layout_width="277dp"
                    android:layout_height="39dp"
                    android:id="@+id/text_infusion_rate"
                    android:gravity="bottom|center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <Button
                    android:text="@string/go_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_go"
                    android:onClick="setTextInfusionRate"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
